@@ -6,7 +6,7 @@
   :dependencies [[org.clojure/clojure "1.8.0"]
                  [org.clojure/clojurescript "1.9.908"]
                  [fulcrologic/fulcro "1.0.0-beta10"]
-                 [fulcrologic/fulcro-spec "1.0.0-beta9" :scope "test" :exclusions [fulcrologic/fulcro]]]
+                 [fulcrologic/fulcro-spec "1.0.0-beta9" :scope "test" :exclusions [org.omcljs/om fulcrologic/fulcro]]]
 
   :uberjar-name "node_trial.jar"
 
@@ -35,8 +35,8 @@
              :production {}
              :dev        {:source-paths ["src/dev" "src/main" "src/test" "src/cards"]
 
-                          :jvm-opts     ["-XX:-OmitStackTraceInFastThrow" "-client" "-XX:+TieredCompilation" "-XX:TieredStopAtLevel=1"
-                                         "-Xmx1g" "-XX:+UseConcMarkSweepGC" "-XX:+CMSClassUnloadingEnabled" "-Xverify:none"]
+                          :jvm-opts     ["-XX:-OmitStackTraceInFastThrow" "-server" "-XX:+TieredCompilation" "-XX:TieredStopAtLevel=1"
+                                         "-Xmx3g" "-Xms1g" "-XX:+PrintGC" "-XX:+UseConcMarkSweepGC" "-XX:+CMSClassUnloadingEnabled" "-Xverify:none"]
 
                           :doo          {:build "automated-tests"
                                          :paths {:karma "node_modules/karma/bin/karma"}}
@@ -49,7 +49,7 @@
 
                           :cljsbuild    {:builds
                                          [{:id           "dev"
-                                           :figwheel     {:on-jsload "cljs.user/mount"}
+                                           ;:figwheel     {:on-jsload "cljs.user/mount"}
                                            :source-paths ["src/dev" "src/main"]
                                            :compiler     {:asset-path           "js/dev"
                                                           :main                 cljs.user
@@ -57,9 +57,17 @@
                                                           :output-dir           "resources/public/js/dev"
                                                           :output-to            "resources/public/js/node_trial.js"
                                                           :preloads             [devtools.preload]
-                                                          :npm-deps {:react "15.6.1"
-                                                                     :react-dom "15.6.1"
-                                                                     "@blueprintjs/core" "1.28.0"}
+                                                          :verbose              true
+                                                          ;;real    3m50.331s
+                                                          ;;user    4m17.755s
+                                                          ;;sys     0m5.507s
+
+                                                          ;:install-deps         true
+                                                          ;:npm-deps             {:react                             "15.5.4"
+                                                                                 ;:react-dom                         "15.5.4"
+                                                                                 ;:react-addons-css-transition-group "15.6.0"
+                                                                                 ;"@blueprintjs/core"                "1.28.0"}
+                                                          :parallel-build       true
                                                           :source-map-timestamp true}}
                                           {:id           "i18n" ;for gettext string extraction
                                            :source-paths ["src/main"]
@@ -93,6 +101,13 @@
                                                           :output-dir           "resources/public/js/cards"
                                                           :output-to            "resources/public/js/cards.js"
                                                           :preloads             [devtools.preload]
+                                                          :verbose              true
+                                                          :install-deps         true
+                                                          ;:npm-deps             {;:react                             "15.5.4"
+                                                                                 ;:react-dom                         "15.5.4"
+                                                                                 ;:react-addons-css-transition-group "15.6.0"
+                                                                                 ;"@blueprintjs/core"                "1.28.0"}
+                                                          ;:parallel-build       true
                                                           :source-map-timestamp true}}]}
 
                           :plugins      [[lein-cljsbuild "1.1.7"]
